--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
     "@fortawesome/fontawesome-free": "^5.6.3",
+    "@stripe/stripe-js": "^1.20.3",
     "angular-bootstrap-md": "file:angular-bootstrap-md-11.1.0.tgz",
     "angular-calendar": "^0.25.2",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "ngx-stripe": "^12.7.0",
     "rxjs": "~6.5.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
