--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "angular-calendar": "^0.25.2",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "ngx-bootstrap": "^7.1.0",
+    "ngx-bootstrap-datetime-popup": "^6.0.0",
+    "ngx-date-picker": "^0.0.24",
+    "ngx-material-timepicker": "^5.5.3",
     "ngx-stripe": "^12.7.0",
     "rxjs": "~6.5.2",
     "tslib": "^2.0.0",
