--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.2.4",
     "@fortawesome/fontawesome-free": "^5.6.3",
     "@stripe/stripe-js": "^1.20.3",
+    "@types/googlemaps": "^3.43.3",
     "angular-bootstrap-md": "file:angular-bootstrap-md-11.1.0.tgz",
     "angular-calendar": "^0.25.2",
     "chart.js": "^2.7.3",
